--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^16.12.0",
     "react-router": "latest",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "styled-components": "^4.4.1",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
